--- a/web-app/templates/outlook.html
+++ b/web-app/templates/outlook.html
@@ -1,37 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>CBGA Analytics Center</title>
-  <link rel="stylesheet" href="https://storage.googleapis.com/code.getmdl.io/1.0.6/material.indigo-pink.min.css">
-  <script src="https://storage.googleapis.com/code.getmdl.io/1.0.6/material.min.js"></script>
-  <script src="http://d3js.org/d3.v3.min.js"></script>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-  <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='style.css') }}">
-  <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='sequences.css') }}">
+    <meta charset="UTF-8">
+    <title>CBGA Analytics Center</title>
+    <link rel="stylesheet" href="https://storage.googleapis.com/code.getmdl.io/1.0.6/material.indigo-pink.min.css">
+    <script src="https://storage.googleapis.com/code.getmdl.io/1.0.6/material.min.js"></script>
+    <script src="http://d3js.org/d3.v3.min.js"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='style.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='sequences.css') }}">
+    <script>
+    var document_name = "{{ document_name }}"
+
+    </script>
 </head>
 <body>
 <!-- No header, and the drawer stays open on larger screens (fixed drawer). -->
 <div class="mdl-layout mdl-js-layout mdl-layout--fixed-drawer">
-  <div class="mdl-layout__drawer mdl-color--blue-800 mdl-color-text--blue-grey-50">
-    <span class="mdl-layout-title">CBGA Analytics</span>
-    <nav class="mdl-navigation">
-      <a class="mdl-navigation__link" href="/outlook">Percentage budget expenditure</a>
-      <a class="mdl-navigation__link" href="/trend">Scheme time trend</a>
-    </nav>
-  </div>
-  <main class="mdl-layout__content">
-    <div class="page-content">
-      <div id="sequence"></div>
-      <div id="chart">
-        <div id="explanation" style="visibility: hidden;">
-          <span id="percentage"></span><br/>
-          of budget within this dept. is allocated to this scheme
-        </div>
-      </div>
+    <div class="mdl-layout__drawer mdl-color--blue-800 mdl-color-text--blue-grey-50">
+        <span class="mdl-layout-title">CBGA Analytics</span>
+        <nav class="mdl-navigation">
+            <select id="document_options" name='document_options' onchange="update_sunburst();">
+                {% for s in document_options %}
+                <option value='{{ s }}'>{{ s }}</option>
+                {% endfor %}
+            </select>
+            <a class="mdl-navigation__link" href="/outlook">Percentage budget expenditure</a>
+            <a class="mdl-navigation__link" href="/trend">Scheme time trend</a>
+        </nav>
     </div>
-  </main>
+    <main class="mdl-layout__content">
+        <div class="page-content">
+            <div id="sequence"></div>
+            <div id="chart">
+                <div id="explanation" style="visibility: hidden;">
+                    <span id="percentage"></span><br/>
+                    of budget within this dept. is allocated to this scheme
+                </div>
+            </div>
+        </div>
+    </main>
 </div>
 <script type="text/javascript" src="{{ url_for('static', filename='sequences.js') }}"></script>
+<script type="text/javascript" src="{{ url_for('static', filename='navigator.js') }}"></script>
+<script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
 </body>
 </html>
